[package]
name = "visa_serial_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
winapi = "0.2.7"
user32-sys = "0.2.0"



[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_Devices_Communication",
    "Win32_System_IO",
]

[lib]
crate-type = ["cdylib"]      